unpackaged/main/default/objects/Requirement_Request__c/Requirement_Request__c.object-meta.xml
<CustomObject>
    <description>https://hive.lightning.force.com/apex/GoToUserStory?US-0007812</description>
    <label>Feature Request</label>
    <nameField>
        <label>Feature Request (Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>