unpackaged/main/default/objects/Requirement_Request__c/fields/Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Analysts</relationshipName>
    <type>Lookup</type>
</CustomField>