unpackaged/main/default/objects/Requirement_Request__c/fields/Complexity_Estimation_story_points__c.field-meta.xml
<CustomField>
    <fullName>Complexity_Estimation_story_points__c</fullName>
    <description>For HIVE team, used to estimate preliminary complexity of the request
US-0011982</description>
    <inlineHelpText>For HIVE team, used to estimate preliminary complexity of the request</inlineHelpText>
    <label>Complexity Estimation (dev story points)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>