unpackaged/main/default/objects/Requirement_Request__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>US-0011982 - Feature request &amp; Project object Technical estimation fields</description>
    <label>Component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey Vista</fullName>
            </value>
            <value>
                <fullName>Domo</fullName>
            </value>
            <value>
                <fullName>Einstein Analytics</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Salesforce - Admin</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
            <value>
                <fullName>SF Community</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>