unpackaged/main/default/objects/Requirement_Request__c/fields/Finance_Approver__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008302 - Enhancement for financial approval on feature requests</description>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>