unpackaged/main/default/objects/Requirement_Request__c/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0008302 - Enhancement for financial approval on feature requests</description>
    <label>Financial Impact</label>
    <type>Checkbox</type>
</CustomField>