unpackaged/main/default/objects/Requirement_Request__c/fields/Hive_Epic__c.field-meta.xml
<CustomField>
    <fullName>Hive_Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hive Epic</label>
    <referenceTo>Hive_Epic__c</referenceTo>
    <relationshipLabel>Feature Requests</relationshipLabel>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>