unpackaged/main/default/objects/Requirement_Request__c/fields/HIVE_Product__c.field-meta.xml
<CustomField>
    <fullName>HIVE_Product__c</fullName>
    <description>US-0008600 - HIVE EPIC,
US-0011331 - New Hive Products Object - Hive Products field changes</description>
    <label>(NOT USED) HIVE Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Area</valueSetName>
    </valueSet>
</CustomField>