unpackaged/main/default/objects/Requirement_Request__c/fields/HIVE_Products__c.field-meta.xml
<CustomField>
    <fullName>HIVE_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0011011</description>
    <inlineHelpText>Please select a relevant Hive Product from the search list</inlineHelpText>
    <label>HIVE Product</label>
    <referenceTo>HIVE_Products__c</referenceTo>
    <relationshipLabel>Feature Requests</relationshipLabel>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>