unpackaged/main/default/objects/Requirement_Request__c/fields/Hive_Project__c.field-meta.xml
<CustomField>
    <fullName>Hive_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008533 - HIVE Project
US-0011126
US-0010666</description>
    <label>HIVE Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Hive Project Status must not be in following values: Draft, New, Completed, Rejected, On-hold</errorMessage>
        <filterItems>
            <field>Hive_Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filterItems>
        <filterItems>
            <field>Hive_Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filterItems>
        <filterItems>
            <field>Hive_Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filterItems>
        <filterItems>
            <field>Hive_Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filterItems>
        <filterItems>
            <field>Hive_Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>On-hold</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hive_Project__c</referenceTo>
    <relationshipLabel>Feature Requests</relationshipLabel>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>