unpackaged/main/default/objects/Requirement_Request__c/fields/MVP__c.field-meta.xml
<CustomField>
    <fullName>MVP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0010867</description>
    <label>MVP</label>
    <type>Checkbox</type>
</CustomField>