unpackaged/main/default/objects/Requirement_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes (from HIVE team)</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>