unpackaged/main/default/objects/Requirement_Request__c/fields/Prio_Average__c.field-meta.xml
<CustomField>
    <fullName>Prio_Average__c</fullName>
    <formula>(
  nullvalue(VALUE( TEXT(Prio_AU__c ) )*0.1,0) +
 NULLVALUE( VALUE(TEXT(  Prio_ES__c ) )*0.0333,0) +
 NULLVALUE( VALUE(TEXT(   Prio_FR__c ) )*0.0333,0) +
NULLVALUE(  VALUE(TEXT(  Prio_IT__c ) )*0.0333 ,0) +
NULLVALUE(  VALUE(TEXT(  Prio_DE__c  ) )*0.2  ,0) +
NULLVALUE(   VALUE(TEXT(  Prio_UK__c  ) )*0.2 ,0) +
NULLVALUE(   VALUE(TEXT(  Prio_US__c  ) )*0.4,0) 
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prio (Average)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>