unpackaged/main/default/objects/Requirement_Request__c/fields/Prio_DE__c.field-meta.xml
<CustomField>
    <fullName>Prio_DE__c</fullName>
    <label>Prio (DE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to10</valueSetName>
    </valueSet>
</CustomField>