unpackaged/main/default/objects/Requirement_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Theme(N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition Management</fullName>
            </value>
            <value>
                <fullName>Ads 2020</fullName>
            </value>
            <value>
                <fullName>Advertising Management</fullName>
            </value>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>Contract Management</fullName>
            </value>
            <value>
                <fullName>Coupon Management</fullName>
            </value>
            <value>
                <fullName>Customer 360</fullName>
            </value>
            <value>
                <fullName>Deal Management</fullName>
            </value>
            <value>
                <fullName>Final Value Fee</fullName>
            </value>
            <value>
                <fullName>Fulfilment</fullName>
            </value>
            <value>
                <fullName>Inventory Sourcing &amp; Price Competitiveness</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Reporting &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>Seller Management (BoB)</fullName>
            </value>
            <value>
                <fullName>System Administration</fullName>
            </value>
            <value>
                <fullName>Targeting</fullName>
            </value>
            <value>
                <fullName>Technical Debt</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>User XP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>