unpackaged/main/default/objects/Requirement_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>US-0011971 - Status additions and amends in Feature Request</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Hold by Business</fullName>
            </value>
            <value>
                <fullName>Technically complex</fullName>
            </value>
            <value>
                <fullName>System Limitations</fullName>
            </value>
            <value>
                <fullName>Legal/Privacy/Finance not approved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Low Business Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>