unpackaged/main/default/objects/Requirement_Request__c/fields/Requirement_Description__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Description__c</fullName>
    <inlineHelpText>We need to understand the business problem statement instead of preferred solution as this will ensure the best possible solution is suggested from the Hive Team</inlineHelpText>
    <label>Description of Customer Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>