unpackaged/main/default/objects/Requirement_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Requirements Clarification</fullName>
                <label>Under Review (Requirement Clarification)</label>
            </value>
            <value>
                <fullName>Requires Prioritization</fullName>
            </value>
            <value>
                <fullName>Sizing by HIVE team</fullName>
            </value>
            <value>
                <fullName>Requirement Accepted</fullName>
                <label>User Story Creation</label>
            </value>
            <value>
                <fullName>Development</fullName>
                <label>Coming Soon</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
                <label>Product Backlog</label>
            </value>
            <value>
                <fullName>Needs Clarification</fullName>
                <isActive>false</isActive>
                <label>Needs Clarification</label>
            </value>
            <value>
                <fullName>Prioritization</fullName>
                <isActive>false</isActive>
                <label>Prioritization</label>
            </value>
            <value>
                <fullName>Testing</fullName>
                <isActive>false</isActive>
                <label>Testing</label>
            </value>
            <value>
                <fullName>Waiting for feedback</fullName>
                <isActive>false</isActive>
                <label>Waiting for Feedback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>