unpackaged/main/default/objects/Requirement_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who is requesting feature request</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>