unpackaged/main/default/objects/Requirement_Request__c/recordTypes/Feature_Request.recordType-meta.xml
<RecordType>
    <fullName>Feature_Request</fullName>
    <active>true</active>
    <label>Feature Request</label>
</RecordType>