unpackaged/main/default/objects/Requirement_Request__c/validationRules/Check_Status_Is_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_Is_Rejected</fullName>
    <active>true</active>
    <description>US-0011971 - Status additions and amends in Feature Request</description>
    <errorConditionFormula>AND(
    NOT($Setup.byPass__c.ByPass_Validation__c),
    NOT(
        OR(
            $Profile.Name == &#39;System Administrator&#39;,
            $Profile.Name == &#39;System Administrator - Limited Privileges&#39;
        )
    ),
    ISPICKVAL( Status__c, &#39;Rejected&#39; ),
    ISBLANK(TEXT(Rejection_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select the Rejection reason</errorMessage>
</ValidationRule>