unpackaged/main/default/objects/Requirement_Request__c/validationRules/Finance_Approver_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Finance_Approver_Check</fullName>
    <active>true</active>
    <description>US-0008302 - Enhancement for financial approval on feature requests</description>
    <errorConditionFormula>IF( AND(Financial_Impact__c, ISBLANK( Finance_Approver__c )  ),true,false)</errorConditionFormula>
    <errorDisplayField>Finance_Approver__c</errorDisplayField>
    <errorMessage>Please provide a Finance Approver for requests with financial impact.</errorMessage>
</ValidationRule>