unpackaged/main/default/objects/Requirement_Request__c/validationRules/No_new_FR_on_Closed_Projects.validationRule-meta.xml
<ValidationRule>
    <fullName>No_new_FR_on_Closed_Projects</fullName>
    <active>true</active>
    <description>US-0010666 - AC3</description>
    <errorConditionFormula>AND( TEXT(Hive_Project__r.Status__c)=&quot;Completed&quot; , ISNEW() )</errorConditionFormula>
    <errorDisplayField>Hive_Project__c</errorDisplayField>
    <errorMessage>The Hive Project attached is in status Completed yet. Please attach any new requests to Hive Project product maintenance.</errorMessage>
</ValidationRule>