unpackaged/main/default/objects/Requirement_Request__c/listViews/Ads_2020.listView-meta.xml
<ListView>
    <fullName>Ads_2020</fullName>
    <columns>Hive_Project__c</columns>
    <columns>NAME</columns>
    <columns>Requirement_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Prio_US__c</columns>
    <columns>Prio_UK__c</columns>
    <columns>Prio_DE__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HIVE_Product__c</field>
        <operation>equals</operation>
        <value>Advertising</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected,On-hold</value>
    </filters>
    <label>Ads 2020</label>
</ListView>