unpackaged/main/default/objects/Requirement_Request__c/listViews/Ads_Migration_EU_2020_2021.listView-meta.xml
<ListView>
    <fullName>Ads_Migration_EU_2020_2021</fullName>
    <columns>NAME</columns>
    <columns>Hive_Project__c</columns>
    <columns>Requirement_Description__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Prio_US__c</columns>
    <columns>Prio_UK__c</columns>
    <columns>Prio_DE__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Ads 2020,Advertising Management</value>
    </filters>
    <label>Ads Migration EU 2020 /2021</label>
</ListView>