unpackaged/main/default/objects/Requirement_Request__c/listViews/Advertising_Feature_Requests.listView-meta.xml
<ListView>
    <fullName>Advertising_Feature_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requirement_Description__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Prio_Average__c</columns>
    <columns>Prio_US__c</columns>
    <columns>Prio_UK__c</columns>
    <columns>Prio_DE__c</columns>
    <columns>Prio_AU__c</columns>
    <columns>Prio_FR__c</columns>
    <columns>Prio_IT__c</columns>
    <columns>Region__c</columns>
    <columns>User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected,On-hold</value>
    </filters>
    <label>Advertising</label>
</ListView>