unpackaged/main/default/objects/Requirement_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hive_Project__c</columns>
    <columns>HIVE_Products__c</columns>
    <columns>Status__c</columns>
    <columns>Prio_Average__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected,On-hold</value>
    </filters>
    <label>All</label>
</ListView>