unpackaged/main/default/objects/Requirement_Request__c/listViews/AU_Feature_Requests.listView-meta.xml
<ListView>
    <fullName>AU_Feature_Requests</fullName>
    <columns>HIVE_Product__c</columns>
    <columns>Hive_Project__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Status__c</columns>
    <columns>Region__c</columns>
    <columns>Prio_Average__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>includes</operation>
        <value>AU</value>
    </filters>
    <label>AU Feature Requests</label>
</ListView>