unpackaged/main/default/objects/Requirement_Request__c/listViews/Chandrika_s_FRs.listView-meta.xml
<ListView>
    <fullName>Chandrika_s_FRs</fullName>
    <columns>NAME</columns>
    <columns>HIVE_Product__c</columns>
    <columns>Hive_Project__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prio_Average__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Chandrika</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Rejected</value>
    </filters>
    <label>Chandrika&#39;s FRs</label>
</ListView>