unpackaged/main/default/objects/Requirement_Request__c/listViews/Contract_Management.listView-meta.xml
<ListView>
    <fullName>Contract_Management</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Hive_Project__c</columns>
    <columns>Requirement_Description__c</columns>
    <columns>User__c</columns>
    <columns>Prio_Average__c</columns>
    <columns>Notes__c</columns>
    <columns>HIVE_Products__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HIVE_Product__c</field>
        <operation>equals</operation>
        <value>Contracts</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Requirements Clarification,Sizing by HIVE team,Requirement Accepted,Development,On-hold</value>
    </filters>
    <filters>
        <field>HIVE_Products__c</field>
        <operation>equals</operation>
        <value>Contracts</value>
    </filters>
    <label>Contract Management</label>
</ListView>