unpackaged/main/default/objects/Requirement_Request__c/listViews/Copy_of_SP_EU_Deals.listView-meta.xml
<ListView>
    <fullName>Copy_of_SP_EU_Deals</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Status__c</columns>
    <columns>MVP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Notes__c</columns>
    <columns>Prio_US__c</columns>
    <columns>Prio_DE__c</columns>
    <columns>Prio_AU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HIVE_Product__c</field>
        <operation>equals</operation>
        <value>Seller Portal</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Requirement_Request__c.Feature_Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Rejected</value>
    </filters>
    <label>SP - Seller Portal (Product Maintenance)</label>
</ListView>